# NeuroRegen-Python

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  requirements.txt  tesla_3axis_pulsed_30min_original.py
.github/workflows/: ci.yml
Ansys Alternative/: config_3axis_centered.yaml  config_multicoil_pulsed.yaml  config_optimized.yaml  constraints.py
Ansys Alternative/docs/: QUICKSTART.md  VS_ANSYS.md
Ansys Alternative/head_models/: skin.stl
ansys_alternative/: README.md  config.yaml  config_multicoil_pulsed_scaled.yaml  config_optimized_run.yaml  optimize.py  requirements.txt  simulate_bfield.py
ansys_alternative/docs/: MANUAL.md
config/: default.yaml  multicoil.yaml  pulsed_tms.yaml
docs/: ansys-integration-guide.md  ansys_integration_plan.md  simulation-settings-breakdown.md
scripts/: generate_ansys_sample.py  pre-commit.hook  run_interactive.py  run_multicoil.py  run_pulsed.py  run_simulation.py
src/neuroregen/: __init__.py  ansys_connection.py  ansys_field_map.py  coil.py  config_loader.py  constants.py  controller.py  csv_logger.py  field_mapping.py  multicoil.py  plotting.py  pulsed.py  simulation.py  state_machine.py  thermal.py
tests/: test_ansys_connection.py  test_ansys_field_map.py  test_coil.py  test_controller_limits.py  test_integration.py  test_pulsed.py  test_state_machine.py  test_thermal.py
